// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButton
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="primary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={true}
    flat={false}
    onClick={null}
    type="primary"
    wrapContent={true}
  >
    <Button
      className="position-relative d-inline-block outline-0 p-0 _156tc02 c-b5b5b5 bc-eaeaea fw-500 min-width-64 border-radius-2 "
      disabled={true}
      onClick={null}
    >
      <button
        className="position-relative d-inline-block outline-0 p-0 _156tc02 c-b5b5b5 bc-eaeaea fw-500 min-width-64 border-radius-2  _focus-outline-0"
        disabled={true}
        onClick={null}
      >
        <div
          className="p-9px_16px_7px c-b5b5b5"
        >
          Press me
        </div>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="primary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="primary"
    wrapContent={false}
  >
    <Button
      className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-5ccee3 fw-500 min-width-64 border-radius-2 "
      disabled={false}
      onClick={null}
    >
      <button
        className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-5ccee3 fw-500 min-width-64 border-radius-2  _focus-outline-0"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="p-9px_16px_7px "
          color="#000"
          fill={true}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="p-9px_16px_7px "
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<Button
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  type="primary"
  wrapContent={false}
>
  <Ripple
    className="p-9px_16px_7px "
    color="#000"
    fill={true}
    overflow={false}
    size={null}
  >
    Press me
  </Ripple>
</Button>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="regular"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="regular"
    wrapContent={false}
  >
    <Button
      className="position-relative d-inline-block outline-0 p-0 _156tc02 c-000 fw-500 min-width-64 border-radius-2 "
      disabled={false}
      onClick={null}
    >
      <button
        className="position-relative d-inline-block outline-0 p-0 _156tc02 c-000 fw-500 min-width-64 border-radius-2  _focus-outline-0"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="p-9px_16px_7px "
          color="#000"
          fill={true}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="p-9px_16px_7px "
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButton
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  type="secondary"
  wrapContent={true}
>
  <Button
    className=""
    disabled={false}
    flat={false}
    onClick={null}
    type="secondary"
    wrapContent={false}
  >
    <Button
      className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-fa5400 fw-500 min-width-64 border-radius-2 "
      disabled={false}
      onClick={null}
    >
      <button
        className="position-relative d-inline-block outline-0 p-0 _156tc02 c-fff bc-fa5400 fw-500 min-width-64 border-radius-2  _focus-outline-0"
        disabled={false}
        onClick={null}
      >
        <Ripple
          className="p-9px_16px_7px "
          color="#000"
          fill={true}
          overflow={false}
          size={null}
        >
          <div
            aria-hidden={true}
            className="p-9px_16px_7px "
            onClick={[Function]}
            style={null}
          >
            Press me
          </div>
        </Ripple>
      </button>
    </Button>
  </Button>
</RippleButton>
`;
